fix letter spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -71,7 +71,7 @@ form button:hover {
 
 @media screen and (max-width: 767px) {
     h2 {
-        font-size: 36px;
+        font-size: 32px;
         letter-spacing: 2px;
     }
 }
